# livestream-sentiment-monitor

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.replay.yaml  render.yaml
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.test.ts  App.tsx  api.ts  styles.css  types.ts  utils.test.ts  utils.ts
contracts/: test_live_payload_contracts.py
contracts/schemas/: live-payloads.schema.json
docs/: demo.md
docs/schemas/: event-envelope.v1.schema.json
eval/: asr_manifest.jsonl  sentiment_chat_labels.jsonl  signal_window_labels.jsonl
eval/reports/: manual-validation-sample.jsonl  seed-evaluation-report.json  signal-correlation-report.json
eval/reports/agent-review/: agent-eval-report.json  agent-reviews.jsonl
ops/grafana/dashboards/: pipeline-health.json
ops/nginx/: default.conf
ops/prometheus/: prometheus.yml
scripts/: evaluate_seed_manifests.py  run_agent_eval.py
services/chat-ingestor-go/: .env.example  Dockerfile.dashboard  Dockerfile.service  go.mod  go.sum
services/sentiment-analyzer-python/: Dockerfile  requirements.txt
services/sentiment-analyzer-python/app/: __init__.py  analyzer.py  server.py
services/sentiment-analyzer-python/tests/: test_analyzer.py  test_server.py
services/transcript-ingestor-cpp/: CMakeLists.txt  Dockerfile
services/transcript-ingestor-cpp/scripts/: nvidia_asr_transcribe.py  nvidia_live_stream_asr.py
services/transcript-ingestor-cpp/src/: main.cpp
(+93 files in other folders)
